# maissistant

./: .gitignore  AGENTS.md  README.md  llms.txt  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.signals/: signals-acoustic.md  signals-kismet.md  signals-lora-lpwan.md  signals-memory-agent.md  signals-ml-detection.md  signals-quickref.md  signals-security-image-video.md  signals-voice-assistant.md  signals-xiao-esp32s3.md  signals.md
.signals/examples/: RESEARCH_PLAN.md  memory_agent.py  voice_assistant.py
TODO/: todo-idea-1.md  todo-idea-2.md
llms.txt/: PRD.md  TODO.md
python-backend/: main.py  pyproject.toml  python-backend.spec
python-backend/src/: agent_brain.py  main.py  model_manager.py  tts_manager.py
scripts/: build_sidecar.sh
src/: settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: ChatInterface.tsx  SettingsApp.tsx
