[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.2",
    "fastapi>=0.121.3",
    "google-generativeai>=0.8.6",
    "openai>=2.8.1",
    "pocket-tts>=1.0.3",
    "pydantic>=2.12.4",
    "pyinstaller>=6.16.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.46",
    "torch>=2.10.0",
    "uvicorn>=0.38.0",
]
